syntax = "proto2";

package cobalt.clearcut_extensions;

import "src/pb/encrypted_message.proto";
import "src/lib/clearcut/clearcut.proto";

message LogEventExtension {
  extend cobalt.lib.clearcut.LogEvent {
    optional LogEventExtension ext = 66566376;
  }

  oneof value {
    cobalt.EncryptedMessage cobalt_encrypted_envelope = 705;
  }
}
